# prompt-tdd

./: .gitignore  Makefile  README.md  pyproject.toml
src/prompt_tdd/: client.py  prompt.py
tests/: factories.py  test_client.py  test_prompt.py
